--- a/PROG6221_Part3_St10071737/MVVM/View/ViewAllRecipesView.xaml
+++ b/PROG6221_Part3_St10071737/MVVM/View/ViewAllRecipesView.xaml
@@ -4,8 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PROG6221_Part3_St10071737.MVVM.View"
-             mc:Ignorable="d" 
+             xmlns:viewModel="clr-namespace:PROG6221_Part3_St10071737.MVVM.ViewModel"
+             mc:Ignorable="d"
              d:DesignHeight="550" d:DesignWidth="780">
+
+    <UserControl.DataContext>
+        <viewModel:ViewAllRecipesViewModel />
+    </UserControl.DataContext>
+
     <StackPanel>
         <StackPanel Orientation="Horizontal">
             <TextBlock Text="Recipe View"
@@ -35,7 +41,8 @@
                                FontSize="15"/>
 
                             <Label Foreground="White"
-                                   FontSize="15"/>
+                                   FontSize="15"
+                                   Content="{Binding SelectedRecipe.RecipeName}"/>
 
                         </StackPanel>
                     </Border>
@@ -140,7 +147,9 @@
                     <Border Height="10"/>
                     <ComboBox Name="CBUoM"
                               Height="20"
-                              Width="180">
+                              Width="180"
+                              ItemsSource="{Binding Recipes}"
+                              SelectedValue="{Binding SelectedRecipe, Mode=TwoWay}">
                     </ComboBox>
 
                     <Border Height="2"/>
